# image-manip

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
include/: image_functions.h  util.h
lib/: CMakeLists.txt
src/: Image Manipulator.cpp  image_functions.cpp  image_functions.h  main.cpp  util.cpp  util.h
